# cornerstone

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: build.yml
cmake/: cornerstoneConfig.cmake.in
examples/: c_api.c  cornerstone_cli.cpp  example.cpp  test_error.cpp
include/cornerstone/: cornerstone.h  cornerstone.hpp
src/: cornerstone.cpp
tests/: test1.cpp
